fixed word wraping on post blocks

--- a/css/global.css
+++ b/css/global.css
@@ -479,7 +479,6 @@ input:read-only {
 }
 
 .post {
-    position: relative;
     background-color: var(--post);
     word-wrap: break-word;
     padding: 10px;
@@ -487,25 +486,7 @@ input:read-only {
     border-radius: 10px;
     color: var(--posttext);
     box-shadow: 0px 1px 5px rgba(77, 77, 77, 0.2);
-}
-
-.post .overlay {
-    position: absolute;
-    padding: 10px;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-}
-
-.post .inner {
-    position: relative;
-    pointer-events: none;
-    z-index: 1;
-}
-
-.post .inner a {
-    pointer-events: all;
+    cursor: pointer;
 }
 
 #postTitle {
